--- a/app/src/main/res/layout/layout_wifiin.xml
+++ b/app/src/main/res/layout/layout_wifiin.xml
@@ -29,7 +29,7 @@ Redistribution and use in source and binary forms, with or without modification,
         android:layout_height="wrap_content"
         android:text ="@string/DescExtWifi"
         />
-    <com.apps4av.avarehelper.storage.SavedEditText
+    <com.stratux.stratuvare.storage.SavedEditText
         android:id="@+id/main_wifi_port"
         android:layout_margin="10dp"
         android:inputType="number"
@@ -54,7 +54,7 @@ Redistribution and use in source and binary forms, with or without modification,
         android:layout_height="wrap_content"
         android:text="@string/Save"/>
     
-    <com.apps4av.avarehelper.storage.SavedEditText
+    <com.stratux.stratuvare.storage.SavedEditText
         android:id="@+id/main_file_name_save"
         android:layout_margin="10dp"
         android:inputType="textUri"
